# BKviewer_FastAPI

./: .gitignore  README.md  ifc_calculators.py  ifc_parsers.py  main.py  pyproject.toml  simulator.py  xgboost_training.py  xgboost_training_NEW.py
output/: combined_training_data_20250520.csv  combined_training_data_20250521.csv  combined_training_data_20250523.csv
static/: bk_rooms.csv  index.html  main.js  style.css
vb_nbs/: vb_Linear_Regression.ipynb
xgboost_models/: xgb_pipeline_20250516.joblib  xgb_pipeline_20250520.joblib  xgb_pipeline_20250521.joblib  xgb_pipeline_20250523.joblib
