[project]
name = "vbthesiscode2-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "ifcopenshell>=0.8.2",
    "joblib>=1.5.0",
    "meteostat>=1.6.8",
    "pandas>=2.2.3",
    "pvlib>=0.12.0",
    "scikit-learn>=1.6.1",
    "uvicorn[standard]>=0.34.2",
    "xgboost>=3.0.1",
]
