[project]
name = "vbthesiscode2-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "ifcopenshell>=0.8.2",
    "ipykernel>=6.29.5",
    "joblib>=1.5.0",
    "matplotlib>=3.10.3",
    "meteostat>=1.6.8",
    "notebook>=7.4.2",
    "pandas>=2.2.3",
    "pvlib>=0.12.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "uvicorn[standard]>=0.34.2",
    "xgboost>=3.0.1",
]
